# nnTrainer

./: .gitignore  metrics.py  pyproject.toml  stand.py  stand_callbacks.py  storage.py  trainer.py  trainer_callbacks.py  trainer_extr_y_pred.py  training.py  utils.py
examples/: stand_callbacks.py  trainer_callbacks.py  trainer_callbacks_old.py  trainer_extr_y_pred.py
nn_trainer/: __init__.py  metrics.py  stand.py  storage.py  trainer.py  utils.py
tests/: test_metrics.py  test_storage.py  test_trainer.py  test_trainstand.py  test_trainstand_old.py
